--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -9,6 +9,13 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/6e780ffe51.js" crossorigin="anonymous"></script>
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+    <script>
+      cloudinary.setCloudName("peskypooch")
+      var widget = cloudinary.createUploadWidget({ 
+        cloudName: "peskypooch", uploadPreset: "poochupload" }, (error, result) => { });
+      widget.open();
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
